<resources>
    <string name="app_name">EZ-Inventory</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="location_detection">Location detection mode: </string>
    <string name="location_context">Location context: </string>
    <string name="not_detected">Not detected</string>
    <string name="invoice">Invoice number: </string>
    <string name="invoice_number">0000</string>
    <string name="scan_barcodes">Scan barcodes</string>
    <string name="item">Item ID</string>
    <string name="item_id">0000</string>
    <string name="total">Total items for this invoice</string>
    <string name="total_number">10</string>
    <string name="scanned">Number of items scanned</string>
    <string name="scanned_number">7</string>
    <string name="progress">View progress</string>
    <string-array name="location_contexts">
        <item>GOODS IN</item>
        <item>GOODS OUT</item>
        <item>AUTO</item>
    </string-array>
</resources>
