<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.yinyee.locator.barcode.BarcodeCaptureActivity">

    <TextView
        android:id="@+id/location_detection_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/location_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_detection"
        app:layout_constraintTop_toTopOf="@+id/location_detection_mode"
        app:layout_constraintBottom_toBottomOf="@+id/location_detection_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/location"
        android:text="@string/not_detected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_detection_mode"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/location_context"
        android:text="@string/location_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/invoice_number"
        android:text="@string/invoice_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/invoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/invoice_number"
        app:layout_constraintBottom_toBottomOf="@+id/invoice_number"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/item_id"
        android:text="@string/item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoice_number"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/item"
        android:text="@string/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_id"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/total_number"
        android:text="@string/total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_id"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/total"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total_number"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/scanned_number"
        android:text="@string/scanned_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_number"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/scanned"
        android:text="@string/scanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scanned_number"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btn_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.github.yinyee.locator.ui.camera.barcode.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanned_number"
        app:layout_constraintVertical_bias="0.0">

        <com.github.yinyee.locator.ui.camera.barcode.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="350dp"
            android:layout_height="300dp" />

    </com.github.yinyee.locator.ui.camera.barcode.CameraSourcePreview>

</android.support.constraint.ConstraintLayout>